--- a/css/styles.less
+++ b/css/styles.less
@@ -22,6 +22,11 @@
     > strong {
       background: @blue;
       color: @white;
+
+      > strike {
+        color: @grey;
+        font-weight: 500;
+      }
     }
 
     > .counter {
