[TASK] Options-Page erweitern [TASK] Screenshots

--- a/css/styles.less
+++ b/css/styles.less
@@ -7,7 +7,8 @@
 @grey: #3f4953;
 @beige: #f2e7da;
 
-#wp_suchanalyse_dashboard_widget {
+#wp_suchanalyse_dashboard_widget,
+#wp_suchanalyse_options_page {
   ul > li {
     float: left;
     margin-right: 5px;
@@ -32,6 +33,10 @@
     > .counter {
       background: @grey;
       color: @white;
+    }
+
+    a {
+      text-decoration: none;
     }
 
     > .delete {
