--- a/css/styles.less
+++ b/css/styles.less
@@ -27,6 +27,20 @@
       > strike {
         color: @grey;
         font-weight: 500;
+        display: none;
+
+        &:before {
+          content: '|';
+          display: inline;
+        }
+      }
+
+      &:hover > strike {
+        display: inline;
+
+        &:before {
+          display: none;
+        }
       }
     }
 
