--- a/css/styles.less
+++ b/css/styles.less
@@ -27,6 +27,15 @@
       > strike {
         color: @grey;
         font-weight: 500;
+        display: none;
+      }
+
+      &:hover {
+        white-space: nowrap;
+
+        > strike {
+          display: inline;
+        }
       }
     }
 
@@ -52,6 +61,10 @@
 }
 
 #wp_suchanalyse_options_page {
+  ul > li > strong > strike {
+    display: inline;
+  }
+
   .row {
     width: 100%;
     display: block;
