[FEATURE] automatisch Suchtreffer-Anzahl anzeigen

--- a/css/styles.less
+++ b/css/styles.less
@@ -44,6 +44,16 @@
       color: @white;
     }
 
+    > .results {
+      background: @beige;
+      color: @grey;
+
+      &.no_post {
+        background: @red;
+        color: @white;
+      }
+    }
+
     a {
       text-decoration: none;
     }
